Fix codeblocks on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,4 +13,6 @@ a {
 
 * {
   box-sizing: border-box;
+  min-width: 0; 
+  min-height: 0;
 }
